# cpp-template

./: CMakeLists.txt  README.md
include/: utils.cpp
include/headers/: utils.hpp
src/: main.cpp
